--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,9 @@ a{
       text-decoration: none; 
       color: black;
 }
+.fab{
+  color: #ccc;
+}
+hr{
+  border: 2px solid rgb(168, 163, 163);
+}
